# nextdns-blocker

./: .dockerignore  .env.example  .gitignore  .nvimlog  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Dockerfile.dev  Makefile  README.es.md  README.md  SCHEDULE_GUIDE.md  SECURITY.md  blocked.txt  build.rs  config.json.example  config.json.pre-sqlite  docker-compose.dev.yml  docker-compose.yml  domains.txt  install.ps1  install.sh  logrotate.conf  ndb.db  nextdns_blocker.py  notifications.py  pyproject.toml  requirements-dev.txt  setup-logrotate.ps1  setup-logrotate.sh
.cargo/: config.toml
.github/: CODEOWNERS  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: ci.yml  dependabot-auto-merge.yml  publish.yml  register-deployment.yml
android/ndb-blocker/: settings.gradle.kts
android/ndb-blocker/app/: build.gradle.kts
docs/: README.md  astro.config.mjs
docs/src/content/: index.mdx
docs/src/pages/: index.astro
docs/src/styles/: custom.css
examples/: gaming.json  minimal.json  parental-control.json  social-media.json  study-mode.json  work-focus.json
ideas/: android-integration.md
migrations/: 001_initial.sql  002_config_to_db.sql  003_remove_protection.sql  004_app_blocking.sql  005_remote_sync_state.sql  006_hosts_blocking.sql  007_allowlist_schedule.sql  008_missing_indexes.sql  009_audit_and_sync_indexes.sql  010_audit_source.sql  011_android_blocking.sql
nextdns-blocker-rs/: .gitignore
nextdns-blocker-rs/specs/: exit_codes.toml
nextdns-blocker-rs/specs/commands/: status.toml  sync.toml
nextdns-blocker-rs/src/: error.rs  sync.rs
nextdns-blocker-rs/src/api/: circuit_breaker.rs  client.rs  rate_limiter.rs  types.rs
nextdns-blocker-rs/src/cli/: allowlist.rs  category.rs  denylist.rs  fix.rs  protection.rs  schema.rs  unblock.rs
nextdns-blocker-rs/src/common/: platform.rs  time.rs
nextdns-blocker-rs/src/config/: types.rs
nextdns-blocker-rs/src/db/: audit.rs  config.rs  domains.rs  import_export.rs  pin.rs  retry.rs  schema.rs  stats.rs
nextdns-blocker-rs/src/handlers/: denylist.rs  init.rs  mod.rs  protection.rs  schema.rs  status.rs
nextdns-blocker-rs/src/notifications/: discord.rs  macos.rs  ntfy.rs  telegram.rs
nextdns-blocker-rs/src/protection/: mod.rs  pin.rs  unlock.rs
nextdns-blocker-rs/src/scheduler/: types.rs
nextdns-blocker-rs/src/watchdog/: mod.rs
nextdns-blocker-rs/tests/: db_test.rs
specs/: envelope.toml  exit_codes.toml
specs/commands/: block.toml  fix.toml  init.toml  status.toml  unblock.toml
specs/commands/allowlist/: add.toml  import.toml  list.toml
specs/commands/apps/: doctor.toml  list.toml  map.toml  restore.toml  scan.toml  unmap.toml
specs/commands/audit/: list.toml
specs/commands/category/: delete.toml  list.toml  remove-domain.toml  show.toml
specs/commands/config/: diff.toml  edit.toml  remove-secret.toml  set-secret.toml  set.toml  show.toml  validate.toml
src/: congruency.rs  error.rs  lib.rs  main.rs  pending.rs  preflight.rs  retry.rs  sync.rs  types.rs
src/android_blocker/: fcm.rs  firebase.rs  mappings.rs  mod.rs
src/api/: cache.rs  circuit_breaker.rs  client.rs  mod.rs  rate_limiter.rs  types.rs
src/app_blocker/: mappings.rs  mod.rs
src/browser_blocker/: mod.rs
src/cli/: allowlist.rs  android.rs  apps.rs  audit.rs  block.rs  category.rs  config.rs  denylist.rs  doctor.rs  hosts.rs  init.rs  mod.rs  nextdns.rs  pending.rs  status.rs  sync.rs  unblock.rs  watchdog.rs
src/common/: domain.rs  keychain.rs  mod.rs  platform.rs
src/config/: constants.rs  mod.rs  types.rs  validation.rs
src/db/: android.rs  apps.rs  audit.rs  categories.rs  config.rs  domains.rs  hosts.rs  mod.rs  nextdns.rs  pending.rs  retry.rs  schema.rs  unlock.rs
src/handlers/: allowlist.rs  android.rs  apps.rs  audit.rs  block.rs  category.rs  config.rs  denylist.rs  doctor.rs  fix.rs  hosts.rs  init.rs  mod.rs  nextdns.rs  pending.rs  protection.rs  schema.rs  status.rs  sync.rs  unblock.rs  watchdog.rs
src/hosts_blocker/: mod.rs
src/nextdns_blocker/: __init__.py  __main__.py  analytics.py  analytics_cli.py  category_cli.py  cli.py  cli_formatter.py  cli_helpers.py  client.py  common.py  completion.py  config.py  config_cli.py  database.py  db_cli.py  exceptions.py  fix_cli.py  init.py  list_cli.py  migrate_to_sqlite.py  nextdns_cli.py  notifications.py  panic.py  panic_cli.py  pending.py  pending_cli.py  pin_helpers.py  platform_utils.py  protection.py  protection_cli.py  retry_queue.py  scheduler.py  status_cli.py  sync_cli.py  types.py  update_check.py  validate_cli.py  watchdog.py
src/notifications/: macos.rs  mod.rs  slack.rs
src/output/: human.rs  json.rs  mod.rs
src/scheduler/: mod.rs
src/watchdog/: cron.rs  launchd.rs  mod.rs  systemd.rs  windows.rs
tests/: cli_test.rs  conftest.py  db_test.rs  integration_test.rs  spec_contract_test.rs  test_allowlist.py  test_analytics.py  test_category_cli.py  test_category_validation.py  test_cli_commands.py  test_cli_helpers.py  test_client.py  test_common.py  test_completion.py  test_config.py  test_config_cli.py  test_config_loading.py  test_database.py  test_file_io_errors.py  test_init.py  test_launchd_recovery.py  test_list_cli.py  test_main_entry.py  test_nextdns_parental_control.py  test_notifications.py  test_panic.py  test_panic_cli.py  test_pending.py  test_pending_cli.py  test_pin.py  test_platform_utils.py  test_protection.py  test_protection_cli.py  test_remote_domains.py  test_retry_queue.py  test_schedule.py  test_update_check.py  test_validation.py  test_watchdog.py
tests/e2e/: conftest.py  test_client.py  test_common_utils.py  test_config.py  test_error_scenarios.py  test_fix_flow.py  test_health_flow.py  test_init_flow.py  test_init_wizard.py  test_platform_utils.py  test_stats_flow.py  test_status_flow.py  test_update_flow.py  test_watchdog_extended.py  test_watchdog_flow.py
(+171 files in other folders)
