[package]
name = "nextdns-blocker"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "CLI tool for managing NextDNS domain blocking with scheduling, protection, and notifications"
license = "MIT"
repository = "https://github.com/aristeoibarra/nextdns-blocker"

[[bin]]
name = "ndb"
path = "src/main.rs"

[dependencies]
# CLI
clap = { version = "4", features = ["derive", "env", "string"] }

# HTTP (sync)
ureq = { version = "3", features = ["json"] }

# Database
rusqlite = { version = "0.31", features = ["bundled"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Error handling
thiserror = "2"

# Time
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.10"

# Crypto (PIN hashing)
argon2 = { version = "0.5", features = ["std"] }
password-hash = { version = "0.5", features = ["rand_core"] }

# Random
rand = "0.9"

# Directories
dirs = "6"

# Secrets
secrecy = { version = "0.10", features = ["serde"] }

# Duration parsing
humantime = "2"

# UUID for IDs
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
# CLI testing
assert_cmd = "2"
predicates = "3"

# Temp files
tempfile = "3"

# JSON schema validation
jsonschema = "0.28"

[profile.release]
lto = true
strip = true
codegen-units = 1
