[project]
name = "nextdns-blocker"
version = "4.0.0"
description = "Automated domain blocking scheduler for NextDNS"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [{ name = "Aristeo Ibarra" }]
keywords = ["blocker", "dns", "nextdns", "parental-control", "productivity"]
dependencies = ["requests>=2.32.5", "tzdata>=2025.2"]

[project.urls]
Homepage = "https://github.com/aristeoibarra/nextdns-blocker"
Repository = "https://github.com/aristeoibarra/nextdns-blocker"

[dependency-groups]
dev = [
  "freezegun>=1.5.5",
  "pytest>=9.0.1",
  "pytest-cov>=7.0.0",
  "responses>=0.25.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
